# MiscLibs

./: .gitignore  AsymmetryCanvasLibs.cpp  ChainData.cpp  ChainG4.cpp  ChainSimple.cpp  ColorExtras.cpp  ColorExtras.h  FindMySQL.cmake  GraphExtras.cpp  GraphExtras.h  HistExtras.cpp  HistExtras.h  HistFit.cpp  HistFit2.cpp  MakeSomeTF1s.cpp  MetaChain.cpp  MinuitFitterExtensions3.h  MinuitWrapperWrapper.cpp  MinuitWrapperWrapper2.cpp  MinuitWrapperWrapper3.cpp  MinuitWrapperWrapper3.h  MinuitWrapperWrapperExtras3.cpp  MinuitWrapperWrapperFitExtensions3.cpp  MinuitWrapperWrapper_fitparam.h  My_FindROOT_2.cmake  Pythonic.cpp  SomeFunctions.cpp  SomeFunctions.h  asym_histset.cpp  asym_histset2.cpp  location.cpp  mini_cal_maker.cpp  treeql_replacement.cpp  use_gcc.sh  use_llvm.sh
BB1/: BB1_cal.numbers  bb1.py  bb1_noise_LX.root  bb1_noise_LY.root  bb1_noise_UX.root  bb1_noise_UY.root  bb1_strip.cpp  bb1_strip.h
BB1_archive/: bb1_strip.cpp  bb1_strip.h
CartoLibs/: FitFits.cpp  FitParam_Extras.cpp  FitUtility.cpp  FitUtility.h  MakeMap.h  MapUtility.cpp  MapUtility.h  canvasplots.cpp  canvasplots.h  make_showing_plots.cpp
FitMap_for_trinat01/Data_Asyms/: JustPlotA_B_ind0_sig2p0_bbr15p5.root  JustPlotA_B_ind0_sig3p0_bbr12p5.root  JustPlotA_B_ind0_sig3p0_bbr15p5.root  JustPlotA_B_ind0_sig3p0_bbr18p5.root  JustPlotA_B_ind0_sig4p0_bbr15p5.root  JustPlotA_B_ind1_sig3p0_bbr15p5.root  JustPlotA_B_ind3_sig3p0_bbr15p5.root  JustPlotA_C_ind0_sig2p0_bbr15p5.root  JustPlotA_C_ind0_sig3p0_bbr12p5.root  JustPlotA_C_ind0_sig3p0_bbr15p5.root  JustPlotA_C_ind0_sig3p0_bbr18p5.root  JustPlotA_C_ind0_sig4p0_bbr15p5.root  JustPlotA_C_ind1_sig3p0_bbr15p5.root  JustPlotA_C_ind3_sig3p0_bbr15p5.root  JustPlotA_D_ind0_sig2p0_bbr15p5.root  JustPlotA_D_ind0_sig3p0_bbr12p5.root  JustPlotA_D_ind0_sig3p0_bbr15p5.root  JustPlotA_D_ind0_sig3p0_bbr18p5.root  JustPlotA_D_ind0_sig4p0_bbr15p5.root  JustPlotA_D_ind1_sig3p0_bbr15p5.root  JustPlotA_D_ind3_sig3p0_bbr15p5.root
FitMap_for_trinat01/Fitter/: AsymCompare11.cpp  AsymCompare12.cpp  AsymCompare13.cpp  AsymCompare13_comparewithsim.cpp  CMakeLists.txt  FitResultsStructure.h  HistogramExportMacro.cc  do_batch.sh  pizza.h
FitMap_for_trinat01/Pizzas/: pizzafile_BCD_ind0_sig2p0_bbr15p5_SetB_thr50.root  pizzafile_BCD_ind0_sig2p0_bbr15p5_SetCD_thr50.root  pizzafile_BCD_ind0_sig3p0_bbr12p5_SetB_thr50.root  pizzafile_BCD_ind0_sig3p0_bbr12p5_SetCD_thr50.root  pizzafile_BCD_ind0_sig3p0_bbr15p5_SetB_thr40.root  pizzafile_BCD_ind0_sig3p0_bbr15p5_SetB_thr50.root  pizzafile_BCD_ind0_sig3p0_bbr15p5_SetB_thr60.root  pizzafile_BCD_ind0_sig3p0_bbr15p5_SetCD_thr40.root  pizzafile_BCD_ind0_sig3p0_bbr15p5_SetCD_thr50.root  pizzafile_BCD_ind0_sig3p0_bbr15p5_SetCD_thr60.root  pizzafile_BCD_ind0_sig3p0_bbr18p5_SetB_thr50.root  pizzafile_BCD_ind0_sig3p0_bbr18p5_SetCD_thr50.root  pizzafile_BCD_ind0_sig4p0_bbr15p5_SetB_thr50.root  pizzafile_BCD_ind0_sig4p0_bbr15p5_SetCD_thr50.root  pizzafile_BCD_ind1_sig3p0_bbr15p5_SetB_thr50.root  pizzafile_BCD_ind1_sig3p0_bbr15p5_SetCD_thr50.root  pizzafile_BCD_ind3_sig3p0_bbr15p5_SetB_thr50.root  pizzafile_BCD_ind3_sig3p0_bbr15p5_SetCD_thr50.root
FitMap_for_trinat01/Results/: results.txt  results_simple.txt
ReTuple/: CMakeLists.txt  MultiTuple.cpp  ReHexPos.cpp  SOEtuple.cpp  TestTuple.cpp  TheCalibrationator.cpp  TupleMyTuple.cpp  TupleMyTuple_5.cpp  TupleMyTuple_kludge.cpp  badTimes.txt  mini_cal_maker.cpp  multituple_the_data.sh  multituple_the_g4.sh  retuple_B.sh  retuple_C.sh  retuple_D.sh  retuple_afew.sh  retuple_all.sh  retuple_electrons.sh  retuple_many.sh  retuple_some.sh  retuple_test.sh  trapposition_comments.txt  treeql_replacement.cpp  tuple_whatican.sh  walkfit_all2.root
ReTuple/HexCal/: uv.calib  uw.calib  vw.calib
TheMadHadder/: CMakeLists.txt  MadHadder.cpp  madhadd.sh  madhadd_multi.sh
